--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,10 +1,22 @@
 p {
   color: #777;
+  font-family: 'Montserrat', sans-serif;
 }
 body {
   font-family: 'Montserrat', sans-serif;
 }
-
+div {
+  font-family: 'Montserrat', sans-serif;
+}
+h1 {
+  font-family: 'Montserrat', sans-serif;
+}
+h1, h2 {
+  font-family: 'Montserrat', sans-serif;
+}
+strong {
+  font-family: 'Montserrat', sans-serif;
+}
 .page-content {
   margin: auto;
   padding: auto;
